--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        $("#result").html("That ends your test");
         //$("#result").html(JSON.stringify(answers));
          $("#result").css('opacity','1');
-         $("#result").html("AI is checking your answers");
+         $("#result").html("AI is checking your answers...");
         question = 'grade this (0-10) and explain: '+ JSON.stringify(QAs[1]);
           askAI(question);
     }
