--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     var QAs = [];
     var answers=[];
     var qindex = 0;    
-    function askAI(question){
+    async function askAI(question){
 
 
 	url = "https://script.google.com/macros/s/AKfycbxtKsYrWU586A2O2sVJf0bg71dT0N1fVuBWIJlDCcmmlABCUKyM1rOdsyjwUp_tUjSs/exec?AskAI="+question;
         $.get(url, function(data){
-		 $("#result").html(data);
+		 return "{'"+question +"','"+data+"'}";
 	});
 
 
@@ -63,9 +63,9 @@
          $("#result").css('opacity','1');
          $("#result").html("AI is checking your answers...");
         question = 'grade this (0-10) and explain: '+ JSON.stringify(QAs[2]);
-          askAI(question);
+          $("#result").html($("#result").html()+askAI(question));
 	     question = 'grade this (0-10) and explain: '+ JSON.stringify(QAs[3]);
-          askAI(question);
+          $("#result").html($("#result").html()+askAI(question));
     }
     
 
