--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ function stop_recording(){
  
 };
     </script>
-    <button id="start-recording" onclick="start_recording()">Record</button>
+    <button id="start-recording" onclick="start_recording()">Record</button><button id="stop-recording" onclick="stop_recording()">Stop</button>
  	
  	 
 <div id='result' style="height: 200px;width: 80%;font-size: 14px;font-family:helvetica;overflow:auto;"><button id="get" onclick="getQA()">Start</button></div>
