--- a/selfie.html
+++ b/selfie.html
@@ -48,7 +48,7 @@
       downloadLink.download = 'acetest.webm';
     });
 
-    mediaRecorder.start();</strong>
+    mediaRecorder.start();
   };
 
   navigator.mediaDevices.getUserMedia({ audio: true, video: true })
