--- a/selfie.html
+++ b/selfie.html
@@ -15,7 +15,7 @@
 </script>
   
   
-  <a id="download">Download</a><button id="stop">Stop</button>
+  <a id="download" href>Download</a><button id="stop">Stop</button>
 <script>
   let shouldStop = false;
   let stopped = false;
