--- a/selfie.html
+++ b/selfie.html
@@ -23,7 +23,9 @@
     const mediaRecorder = new MediaRecorder(stream, options);
      player.srcObject = stream;
     mediaRecorder.addEventListener('dataavailable', function(e) {
+      console.log("dataavailable");
       if (e.data.size > 0) {
+        
         recordedChunks.push(e.data);
       }
 
