--- a/selfie.html
+++ b/selfie.html
@@ -9,7 +9,7 @@
   let shouldStop = false;
   let stopped = false;
   var mediaRecorder;
-  const recordedChunks = [];
+  const chunks = [];
   const downloadLink = document.getElementById('download');
   const stopButton = document.getElementById('stop');
    var player = document.getElementById('player');
