--- a/selfie.html
+++ b/selfie.html
@@ -19,7 +19,7 @@
     shouldStop = true;
     console.log("clicked stop");
     mediaRecorder.stop();
-    console.log(recordedChunks);
+    console.log(chunks);
   };
 
   var handleSuccess = function(stream) {
