--- a/selfie.html
+++ b/selfie.html
@@ -35,6 +35,7 @@
         } else {
           stopped = false;
           mediaRecorder.start();
+          console.log(mediaRecorder.state);
         }
       }
 
