--- a/selfie.html
+++ b/selfie.html
@@ -1,69 +1,17 @@
 <html>
  <head>
    
-   <style>
-     body {
-  font: 14px "Open Sans", "Arial", sans-serif;
-}
-
-video {
-  margin-top: 2px;
-  border: 1px solid black;
-}
-
-.button {
-  cursor: pointer;
-  display: block;
-  width: 160px;
-  border: 1px solid black;
-  font-size: 16px;
-  text-align: center;
-  padding-top: 2px;
-  padding-bottom: 4px;
-  color: white;
-  background-color: darkgreen;
-  text-decoration: none;
-}
-
-h2 {
-  margin-bottom: 4px;
-}
-
-.left {
-  margin-right: 10px;
-  float: left;
-  width: 160px;
-  padding: 0px;
-}
-
-.right {
-  margin-left: 10px;
-  float: left;
-  width: 160px;
-  padding: 0px;
-}
-
-.bottom {
-  clear: both;
-  padding-top: 10px;
-}
-   </style>
+   <link rel="stylesheet" href="selfie.css">
   </head>
   <body>
-  <!-- Learn about this code on MDN: https://developer.mozilla.org/en-US/docs/Web/API/MediaStream_Recording_API/Recording_a_media_element -->
-
-<p>Click the "Start" button to begin video recording for a few seconds. You can stop
-   the video by clicking the creatively-named "Stop" button. The "Download"
-   button will download the received data (although it's in a raw, unwrapped form
-   that isn't very useful).
-</p>
-<br>
+  
 <div class="left">
-  <div id="startButton" class="button">
-    Start
-  </div>
+  
   <h2>Preview</h2>
   <video id="preview" width="160" height="120" autoplay muted></video>
+ <div id="startButton" class="button">
+    Start
+  </div>
 </div>
 <div class="right">
   <div id="stopButton" class="button">
