--- a/selfie.html
+++ b/selfie.html
@@ -10,7 +10,7 @@
   <h2>Preview</h2>
   <video id="preview" width="160" height="120" autoplay muted></video>
  <div id="startButton" class="button">
-    Start
+    Record
   </div>
 </div>
 <div class="right">
