--- a/selfie.html
+++ b/selfie.html
@@ -2,7 +2,7 @@
  <head>
    
    <link rel="stylesheet" href="selfie.css">
-    <script src="selfie.js">
+    <script src="selfie1.js">
     
     </script>
   </head>
