--- a/selfie.html
+++ b/selfie.html
@@ -8,18 +8,18 @@
   
 <div class="left">
   
-  <h2>Preview</h2>
+  <h2>Selfie</h2>
   <video id="preview" width="320" height="240" autoplay muted></video>
- <div id="startButton" class="button">
+ <div id="startButton" class="button" onclick="record()">
     Record
   </div>
 </div>
 <div class="right">
-  <div id="stopButton" class="button">
+  <div id="stopButton" class="button" onclick="stopRecord()">
     Stop
   </div>
   <h2>Recording</h2>
-  <video id="recording" width="160" height="120" controls></video>
+  <video id="recording" width="320" height="240" controls></video>
   <a id="downloadButton" class="button">
     Download
   </a>
