--- a/index.html
+++ b/index.html
@@ -99,31 +99,8 @@
 	
     <video id="video" width="640" height="480" autoplay></video>
   
-    <script>
-   const video = document.getElementById('video');
-	navigator.mediaDevices.getUserMedia({video: true})
-	  .then(stream => {
-	    video.srcObject = stream;
-	  });
-   
-function start_recording(){
-  const chunks = [];
-  const mediaRecorder = new MediaRecorder(video.srcObject);
-  mediaRecorder.ondataavailable = event => chunks.push(event.data);
-  mediaRecorder.onstop = () => {
-    const blob = new Blob(chunks, {type: 'video/mp4'});
-    const formData = new FormData();
-    formData.append('video', blob, 'myvideo.mp4');
-    // Upload formData to server using XMLHttpRequest or fetch()
-  };
-  mediaRecorder.start();
-}
-function stop_recording(){	    
-    mediaRecorder.stop();
- 
-};
-    </script>
-    <button id="start-recording" onclick="start_recording()">Record</button><button id="stop-recording" onclick="stop_recording()">Stop</button>
+  
+    <button id="start-recording" onclick="record()">Record</button><button id="stop-recording" onclick="stopRecord()">Stop</button>
  	
  	 
 <div id='result' style="height: 200px;width: 80%;font-size: 14px;font-family:helvetica;overflow:auto;"><button id="get" onclick="getQA()">Start</button></div>
@@ -131,9 +108,8 @@ function stop_recording(){
 <br><button id="send" onclick="showNext()">Send</button><br>
 
 <textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"></textarea>
+  <script src="selfie2.js"></script>
 </body>  
 </html>
 
-  </body>
-</html>
 
