--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 </script>
 	
-    <video id="video" width="640" height="480" autoplay></video>
+    <video id="preview" width="640" height="480" autoplay></video>
   
   
     <button id="start-recording" onclick="record()">Record</button><button id="stop-recording" onclick="stopRecord()">Stop</button>
