--- a/index.html
+++ b/index.html
@@ -97,7 +97,10 @@
 
 </script>
 	
-    <video id="preview" width="640" height="480" autoplay></video>
+    <video id="preview" width="640" height="480" autoplay></video> <video id="recording" width="320" height="240" controls></video>
+  <a id="downloadButton" class="button">
+    Download
+  </a>
   
   
     <button id="start-recording" onclick="record()">Record</button><button id="stop-recording" onclick="stopRecord()">Stop</button>
