--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 <br><button id="send" onclick="showNext()">Send</button><br>
 
 <textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"></textarea>
+	<label id="log" style="display:none"></label>
   <script src="selfie2.js"></script>
 </body>  
 </html>
