--- a/index.html
+++ b/index.html
@@ -98,21 +98,36 @@
   
 
 </script>
-	
-    <video id="preview" width="320" height="240" autoplay></video> <video id="recording" width="320" height="240" controls></video>
-  <a id="downloadButton" class="button">
-    Download
-  </a>
-  
-  
-    <button id="start-recording" onclick="record()">Record</button><button id="stop-recording" onclick="stopRecord()">Stop</button>
- 	
- 	 
-<div id='result' style="height: 200px;width: 80%;font-size: 14px;font-family:helvetica;overflow:auto;"><button id="get" onclick="getQA()">Start</button></div>
+<table>
+	<tr>
+		<td>
+		</td>
+		<td>
+			<div id='result' style="height: 200px;width: 80%;font-size: 14px;font-family:helvetica;overflow:auto;"><button id="get" onclick="getQA()">Start</button></div>
 
 <br><button id="send" onclick="showNext()">Send</button><br>
+		</td>
+	</tr>
+	<tr>
+		<td>
+			 <video id="preview" width="320" height="240" autoplay></video> <video id="recording" width="320" height="240" controls></video>
+			  <a id="downloadButton" class="button">
+			    Download
+			  </a>
+  
+   			 <button id="start-recording" onclick="record()">Record</button><button id="stop-recording" onclick="stopRecord()">Stop</button>
+		</td>
+		<td>
+			<textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"></textarea>
+		</td>
+	</tr>
+	</table>
+   
+ 	
+ 	 
 
-<textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"></textarea>
+
+
 	<label id="log" style="display:none"></label>
   <script src="selfie2.js"></script>
 </body>  
