--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
          
         </td>
 	<td>
-		<div id="prevAnswer"></div>
+		<div id="prevAnswer"> Welcome! When you are ready, click the go button. You will see a question on the left. After completing your answer, click GO</div>
 	 </td>
       </tr>
       <tr>
@@ -143,8 +143,8 @@
             style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"
           ></textarea>
         </td>
-	      <td><button id="get" onclick="getQA()">Start</button>
-		       <br /><button id="send" onclick="showNext()">Send</button><br />
+	      <td>
+		       <br /><button id="send" onclick="showNext()">Go</button><br />
 	      </td>
 		  
       </tr>
