--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <td>
           <div
             id="result"
-            style="height: 200px;width: 800px;font-size: 14px;font-family:helvetica;overflow:auto;"
+            style="height: 200px;width: 600px;font-size: 14px;font-family:helvetica;overflow:auto;"
           >
             
           </div>
@@ -118,7 +118,7 @@
          
         </td>
 	<td>
-		<div id="prevAnswer"> Welcome! When you are ready, click the go button. You will see a question on the left. After completing your answer, click GO</div>
+		<div id="prevAnswer" style="height:300px;overflow:auto"> Welcome! When you are ready, click the go button. You will see a question on the left. After completing your answer, click GO</div>
 	 </td>
       </tr>
       <tr>
@@ -141,7 +141,7 @@
         <td>
           <textarea
             id="prompt_div"
-            style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"
+            style="height: 300px;width: 100%;font-size: 14px;font-family:helvetica"
           ></textarea>
         </td>
 	      <td>
