--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	   
     </script>
     <table>
-      <tr style="background-color:#ddd">
+      <tr style="background-color:#333">
         <td>
           <img
             style="width:200px"
