--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 		      if(qindex !==0){
 		       answers.push([QAs[qindex][0],$("#prompt_div").val()]);
-			 $("#prevAnswer").html("<div style='margin:5px;color:grey;background:#eff'><b>Prev question </b>:"+ QAs[qindex-1][0] + "<br> <b>Best Answer</b> : "+  QAs[qindex-1][1] +" <br></div>")
+			 $("#prevAnswer").html("<div style='margin:5px;color:grey;background:#ddd'><b>Prev question </b>:"+ QAs[qindex-1][0] + "<br> <b>Best Answer</b> : "+  QAs[qindex-1][1] +" <br></div>")
 			 $("#result").html("<b>Your next question</B>: "+ QAs[qindex][0] );
 			 $("#result").css('opacity','1');
 			   }else{
