--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<td>
              <input id="topic" type"text><button id="send" onclick="showNext()">Go</button><br />
 				  <textarea
-				    id="prompt_div"
+				    id="prompt_div" placeholder ="Enter your answer here"
 				    style="height: 300px;width: 100%;font-size: 14px;font-family:helvetica"
 				  ></textarea>
 				
